--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link active">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html">ABOUT</a></li>
-                        <li class="nav-item"><a class="nav-link" href="assets/img/rpa%20intro.jpg">SKILLS</a></li>
-                        <li class="nav-item"><a class="nav-link" href="assets/img/pill%203.jpg">PROJECT</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="aboutme">ABOUT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#skills">SKILLS</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#project">PROJECT</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#myFooter">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,7 +62,7 @@
     <section class="index-howto-alt py-3">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12" id="aboutme">
                     <h1 data-bss-hover-animate="bounce" style="text-align: center;">About Me,</h1>
                 </div>
             </div>
@@ -112,7 +112,7 @@
         </div>
     </section>
     <section class="article-list">
-        <div class="container">
+        <div class="container" id="skills">
             <div class="intro">
                 <h2 class="text-center"><strong>Skills Achieved</strong><br></h2>
                 <p class="text-center" style="font-size: 21px;">and CERTIFICATIONS<br><br></p>
@@ -227,7 +227,7 @@
                 <h1 class="text-center" data-bss-hover-animate="bounce"><br><strong>PROJECT</strong><br><br></h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="project">
             <div class="col-md-6 col-lg-8" style="padding: 13px;width: 697px;">
                 <h2><strong>Pill Dispenser</strong><br></h2>
                 <p><br>This report presents The Pill Dispenser prototype, the main aim of this device is to help people having problem taking their pills on time in accordance with the dose prescribed to them. This device mainly targets old age patients who lacks remembering skills and miss their doses, this device also eliminates the risk of overdosing as the patient forgets that he/she has already taken the pill and takes multiple doses, and it also eliminates the risk of underdosing as the patient forgets that they have not taken their medicine and miss their dose at a level which can be lethal.<br></p><a class="btn btn-primary-outline" href="#" role="button">Read More &rarr;</a>
